--- a/style.css
+++ b/style.css
@@ -4,55 +4,50 @@
     padding:0;
 }
 :root{
-    --button-w: 4rem;
-    --button-h: calc(var(--button-w) * 2 / 3);
+    --button-h: 4rem;
+    --button-w: calc(var(--button-h) * 2 / 3);
     --bg-color: var(--tg-theme-bg-color, #fff);
     font-size: 14px;
 }
 body {
-    background: transparent;
     font-family: sans-serif;
     color: var(--tg-theme-text-color, #222);
     padding: 15px;
     color-scheme: var(--tg-color-scheme);
+    background: transparent;
 }
 .viewport-container {
     padding: 1rem;
+    border-right: 1px solid blue;
     border-top: 1px solid blue;
-    border-radius: 1rem;
-    display: flex;
-    flex-direction: row;
-
-    align-content: center;
-    align-items: center;
-    justify-content: space-between;
-
+    border-radius: 1rem 1rem 0 0;
     left: 0;
     right: 0;
     bottom: 0;
-
     position: fixed;
     transition: height .2s ease;
     background-color: var(--bg-color, #ffffff);
+    max-width: 500px;
 }
-.flex2 {
-
-    justify-content: space-between;
-    display:inline-flex;
-    align-items: center;
-
-}
-.button-container {
-    border: 1px solid green;
-    max-width: 8ch;
-    padding: 4px;
-    flex-direction: column;
-}
-.input-container {
+.flex-container{
+    display: flex;
     flex-direction: row;
-    align-content: flex-end;
+    align-content: center;
+    align-items: center;
+    justify-content: space-between;
 }
-.button {
+.grid-container{
+    display: grid;
+    grid-template-areas: "usOdds decOdds reset" "slider slider reset";
+    align-items:  center;
+    justify-items: center;
+}
+.grid-container div{display: flex;}
+#usOdds {grid-area: usOdds;}
+#decOdds {grid-area: decOdds;}
+#slider {grid-area: slider;}
+#clear {
+    grid-area: reset;
     background-color: var(--tg-theme-button-color, #50a8eb);
     border: none;
     border-radius: 4px;
@@ -64,17 +59,13 @@ body {
     height: var(--button-h);
     width: var(--button-w);
 }
-.clear_btn {}
-.close_btn {
-    background-color: red;
-    color: white;
-}
 label {
     display: inline-block;
-    margin: 0 0.3rem 0 0.6rem;
-
+    margin-left: 0.3rem;
+    margin-right: 0.6rem;
 }
 img {
+    height: calc(var(--button-w) * 2 / 3);
     width: calc(var(--button-w) * 2 / 3);
 }
 input[type="number"] {
@@ -86,5 +77,107 @@ input[type="number"] {
     color: var(--tg-theme-text-color, #222222);
     text-align: center;
 }
+input[type="range"] {
+    -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+    width: 100%; /* Specific width is required for Firefox. */
+    background: transparent; /* Otherwise white in Chrome */
+    margin: 1.3rem 0;
+}
 
+input[type="range"]:focus {
+    outline: 1px solid var(--tg-theme-link-color, #000);
+    box-shadow: 0 0 1rem var(--tg-theme-link-color, #000);
+}
 
+input[type="range"]::-ms-track {
+    width: 100%;
+    cursor: pointer;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    border: 1px solid #000000;
+    height: 2rem;
+    width: 1rem;
+    border-radius: 0.5rem;
+    background: #ffffff;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -0.8rem;
+}
+input[type=range]::-moz-range-thumb {
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    border: 1px solid #000000;
+    height: 2rem;
+    width: 1rem;
+    border-radius: 0.5rem;
+    background: #ffffff;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -0.8rem;
+}
+input[type=range]::-ms-thumb {
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    border: 1px solid #000000;
+    height: 2rem;
+    width: 1rem;
+    border-radius: 0.5rem;
+    background: #ffffff;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -0.8rem;
+}
+input[type="range"]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 8.4px;
+    cursor: pointer;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    background: #3071a9;
+    border-radius: 4px;
+    border: 0.2px solid #010101;
+}
+
+input[type="range"]:focus::-webkit-slider-runnable-track {
+    background: #367ebd;
+}
+
+input[type="range"]::-moz-range-track {
+    width: 100%;
+    height: 8.4px;
+    cursor: pointer;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    background: #3071a9;
+    border-radius: 1.3px;
+    border: 0.2px solid #010101;
+}
+
+input[type="range"]::-ms-track {
+    width: 100%;
+    height: 8.4px;
+    cursor: pointer;
+    background: transparent;
+    border-color: transparent;
+    border-width: 16px 0;
+    color: transparent;
+}
+input[type="range"]::-ms-fill-lower {
+    background: #2a6495;
+    border: 0.2px solid #010101;
+    border-radius: 2.6px;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type="range"]:focus::-ms-fill-lower {
+    background: #3071a9;
+}
+input[type="range"]::-ms-fill-upper {
+    background: #3071a9;
+    border: 0.2px solid #010101;
+    border-radius: 2.6px;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type="range"]:focus::-ms-fill-upper {
+    background: #367ebd;
+}
