--- a/style.css
+++ b/style.css
@@ -64,6 +64,9 @@ input[type=number].grey{
     box-shadow: inset 0 0 1rem var(--tg-theme-hint-color, var(--color));
     color: var(--tg-theme-hint-color, var(--color));
 }
+input[type=number].invalid{
+    color: var(--tg-theme-destructive-text-color);
+}
 .flex-container{
     display: flex;
     flex-direction: row;
