--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ label {
     border-radius: 1rem 1rem 0 0;
     border-color: var(--link-darker);
     box-shadow: 0 -1rem 2rem var(--tg-theme-subtitle-text-color, #999999);
-    bottom: 0;
+    bottom: -100%;
     position: absolute;
     transition: height .2s ease;
     width: 100%;
