--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ label {
     border-color: var(--link-darker);
     box-shadow: 0 -1rem 2rem var(--tg-theme-subtitle-text-color, #999999);
     bottom: 0;
+    padding-bottom: 48px;
     position: absolute;
     transition: height .2s ease;
     width: 100%;
